--- a/ChengYuDaHuiGame/res/layout/activity_dictate.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_dictate.xml
@@ -46,7 +46,7 @@
                     android:background="@drawable/mizige1"
                     android:gravity="center"
                     android:tag="1"
-                    android:textSize="45sp" />
+                    android:textSize="55sp" />
 
                 <ImageView
                     android:id="@+id/dictate_first_word_img"
@@ -84,7 +84,7 @@
                     android:background="@drawable/mizige1"
                     android:gravity="center"
                     android:tag="2"
-                    android:textSize="45sp" />
+                    android:textSize="55sp" />
 
                 <ImageView
                     android:id="@+id/dictate_second_word_img"
@@ -122,7 +122,7 @@
                     android:background="@drawable/mizige1"
                     android:gravity="center"
                     android:tag="3"
-                    android:textSize="45sp" />
+                    android:textSize="55sp" />
 
                 <ImageView
                     android:id="@+id/dictate_third_word_img"
@@ -159,7 +159,7 @@
                     android:background="@drawable/mizige1"
                     android:gravity="center"
                     android:tag="4"
-                    android:textSize="45sp" />
+                    android:textSize="55sp" />
 
                 <ImageView
                     android:id="@+id/dictate_fourth_word_img"
@@ -173,22 +173,36 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/dictate_word_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/dictate_word_comment"
-        android:layout_below="@+id/dictate_word_layout"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/dictate_word_comment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_above="@+id/dictate_show_result"
-        android:paddingLeft="5dip"
-        android:paddingRight="5dip"
-        android:textSize="20sp" />
+        android:layout_below="@+id/dictate_word_layout"
+        android:layout_marginTop="20dip"
+        android:scrollbars="vertical" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/dictate_word_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dip" />
+
+            <TextView
+                android:id="@+id/dictate_word_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dip"
+                android:paddingLeft="5dip"
+                android:paddingRight="5dip"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/dictate_show_result"
