--- a/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:onClick="launchChengYuStudy"
+                android:onClick="launchChengyuDictatet"
                 android:src="@drawable/main_menu_hanzitingxie_selector" />
         </LinearLayout>
 
