--- a/ChengYuDaHuiGame/res/drawable/list_click_item_selector.xml
+++ b/ChengYuDaHuiGame/res/drawable/list_click_item_selector.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:drawable="@drawable/list_click_item_pressed" android:state_pressed="true"/>
-    <item android:drawable="@drawable/list_click_item_pressed" android:state_focused="true"/>
-    <item android:drawable="@drawable/list_click_item_normal"/>
+    
+    <item android:drawable="@drawable/list_click_item_pressed" android:state_enabled="true" android:state_pressed="true"></item>
+    <item android:drawable="@drawable/list_click_item_pressed" android:state_enabled="true" android:state_focused="true"></item>
+    <item android:drawable="@drawable/list_click_item_pressed" android:state_enabled="true" android:state_selected="true"></item>
+    <item android:drawable="@drawable/list_click_item_normal"></item>
 
 </selector>
