--- a/ChengYuDaHuiGame/res/layout/knowledge_main.xml
+++ b/ChengYuDaHuiGame/res/layout/knowledge_main.xml
@@ -75,11 +75,11 @@
             android:layout_height="match_parent"
             android:divider="@null"
             android:dividerHeight="4dp"
-			android:background="@android:color/transparent"
-			android:cacheColorHint="#00000000"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+			android:listSelector="@android:color/transparent"
+			android:padding="16dp"
             android:scrollbarStyle="outsideInset"
+            android:cacheColorHint="#ff0000"
+            android:fadingEdge="none"
             ></ListView>
 
     </LinearLayout>
