--- a/ChengYuDaHuiGame/res/layout/picture_guess_main.xml
+++ b/ChengYuDaHuiGame/res/layout/picture_guess_main.xml
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="174dp"
             android:layout_margin="16dp"
-            android:background="@drawable/chengyu_pic_bg"
+            android:background="@drawable/text_box_bg"
             android:layout_alignParentTop="true"
             android:gravity="center"
             android:orientation="horizontal" >
