--- a/ChengYuDaHuiGame/res/layout/picture_guess_main.xml
+++ b/ChengYuDaHuiGame/res/layout/picture_guess_main.xml
@@ -45,8 +45,8 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="看图猜成语"
-            android:textSize="25sp"
             android:textColor="@android:color/black"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageView
@@ -67,14 +67,14 @@
         android:background="@drawable/activity_middle"
         android:paddingBottom="5dp"
         android:paddingTop="5dp" >
-        
+
         <LinearLayout
             android:id="@+id/ll_cy_icon"
             android:layout_width="match_parent"
             android:layout_height="174dp"
+            android:layout_alignParentTop="true"
             android:layout_margin="16dp"
             android:background="@drawable/text_box_bg"
-            android:layout_alignParentTop="true"
             android:gravity="center"
             android:orientation="horizontal" >
 
@@ -84,23 +84,22 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/test" />
         </LinearLayout>
-        
+
         <GridView
             android:id="@+id/gv_cy_word"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:verticalSpacing="1dp"
             android:horizontalSpacing="4dp"
-            android:numColumns="8"
-            android:layout_alignParentBottom="true"
             android:listSelector="@android:color/transparent"
-            >
+            android:numColumns="8"
+            android:verticalSpacing="1dp" >
         </GridView>
-        
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -109,16 +108,37 @@
             android:gravity="center"
             android:orientation="horizontal" >
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" 
+                android:layout_marginRight="10dp"
+                >
+
+                <ImageView
+                    android:id="@+id/iv_cy_tip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:clickable="true"
+                    android:src="@drawable/cy_word" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="提示"
+                    android:textColor="@android:color/black" />
+            </RelativeLayout>
+
             <Button
                 android:id="@+id/btn_answer_01"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/cy_answer"
+                android:background="@drawable/text_box_bg"
                 android:padding="0dp"
-                android:text="冰"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/black" />
 
             <Button
                 android:id="@+id/btn_answer_02"
@@ -126,10 +146,9 @@
                 android:layout_height="35dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/cy_answer"
+                android:background="@drawable/text_box_bg"
                 android:padding="0dp"
-                android:text="天"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/black" />
 
             <Button
                 android:id="@+id/btn_answer_03"
@@ -137,10 +156,9 @@
                 android:layout_height="35dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/cy_answer"
+                android:background="@drawable/text_box_bg"
                 android:padding="0dp"
-                android:text="雪"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/black" />
 
             <Button
                 android:id="@+id/btn_answer_04"
@@ -148,12 +166,32 @@
                 android:layout_height="35dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/cy_answer"
+                android:background="@drawable/text_box_bg"
                 android:padding="0dp"
-                android:text="地"
-                android:textColor="@android:color/white" />
-        </LinearLayout>
+                android:textColor="@android:color/black" />
 
-</RelativeLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" 
+                android:layout_marginLeft="10dp"
+                >
+
+                <ImageView
+                    android:id="@+id/iv_cy_free"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:clickable="true"
+                    android:src="@drawable/cy_word" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="免费"
+                    android:textColor="@android:color/black" />
+            </RelativeLayout>
+        </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
