--- a/ChengYuDaHuiGame/res/layout/activity_chengyu_dictionary.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_chengyu_dictionary.xml
@@ -45,11 +45,15 @@
             android:layout_toRightOf="@id/iv_back"
             android:gravity="center_vertical" >
 
-            <EditText
+            <AutoCompleteTextView
                 android:id="@+id/et_search"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/text_box_bg"
+                android:completionThreshold="1"
+                android:dropDownHeight="wrap_content"
+                android:dropDownVerticalOffset="0dp"
+                android:hint="搜索成语"
                 android:paddingLeft="32dp"
                 android:paddingRight="40dp"
                 android:singleLine="true"
@@ -65,13 +69,14 @@
 
             <ImageView
                 android:id="@+id/iv_clear_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
                 android:clickable="true"
                 android:onClick="clearText"
                 android:paddingRight="10dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/delete_selector"
                 android:visibility="gone" />
         </RelativeLayout>
