--- a/ChengYuDaHuiGame/res/values/colors.xml
+++ b/ChengYuDaHuiGame/res/values/colors.xml
@@ -18,5 +18,8 @@
     <color name="titlebar_bg">#ffc6bc</color>
     <color name="actionbar_button_normal">#00000000</color>
     <color name="actionbar_button_pressed">#e0a0a0</color>
+    
+     <color name="divider_color">#11000000</color>
+     <color name="dialog_bg">#fff9f0f0</color>
 
 </resources>
