--- a/ChengYuDaHuiGame/res/layout/activity_chengyu_dictionary.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_chengyu_dictionary.xml
@@ -54,6 +54,7 @@
                 android:dropDownHeight="wrap_content"
                 android:dropDownVerticalOffset="0dp"
                 android:hint="搜索成语"
+                android:imeOptions="actionSearch"
                 android:paddingLeft="32dp"
                 android:paddingRight="40dp"
                 android:singleLine="true"
@@ -94,8 +95,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp" >
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp" >
 
             <ImageView
                 android:id="@+id/iv_previous"
@@ -103,10 +104,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="38dp"
                 android:clickable="true"
                 android:onClick="previousChengYu"
-                android:padding="5dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="38dp"
+                android:paddingRight="5dp"
+                android:paddingTop="10dp"
                 android:src="@drawable/btn_previous_selector" />
 
             <ImageView
@@ -115,10 +118,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="38dp"
                 android:clickable="true"
                 android:onClick="nextChengYu"
-                android:padding="5dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="38dp"
+                android:paddingTop="10dp"
                 android:src="@drawable/btn_next_selector" />
 
             <TextView
