--- a/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
@@ -2,6 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="5dip"
+    android:background="#1a000000"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -10,12 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:paddingTop="10dip" >
 
         <LinearLayout
             android:id="@+id/dictate_result_first_layout"
             android:layout_width="75dip"
             android:layout_height="150dip"
+            android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
             <TextView
@@ -36,6 +40,7 @@
             android:id="@+id/dictate_result_second_layout"
             android:layout_width="75dip"
             android:layout_height="150dip"
+            android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
             <TextView
@@ -56,6 +61,7 @@
             android:id="@+id/dictate_result_third_layout"
             android:layout_width="75dip"
             android:layout_height="150dip"
+            android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
             <TextView
@@ -105,15 +111,17 @@
             android:id="@+id/dictate_right"
             android:layout_width="100dip"
             android:layout_height="75dip"
+            android:background="@drawable/cy_word"
             android:text="@string/game_right"
-            android:textSize="30sp" />
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/dictate_wrong"
             android:layout_width="100dip"
             android:layout_height="75dip"
+            android:background="@drawable/cy_word"
             android:text="@string/game_wrong"
-            android:textSize="30sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
 </RelativeLayout>
