--- a/ChengYuDaHuiGame/res/layout/paint_surface.xml
+++ b/ChengYuDaHuiGame/res/layout/paint_surface.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#1affffff"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#1affffff" >
 
     <TextView
         android:id="@+id/paint_chengyu_name"
@@ -21,32 +21,35 @@
         android:layout_centerHorizontal="true" />
 
     <LinearLayout
-        android:gravity="center"
-        android:layout_marginTop="10dip"
         android:id="@+id/paint_result_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/paint_image_view"
+        android:layout_marginTop="10dip"
+        android:gravity="center"
         android:orientation="horizontal" >
 
         <Button
-            android:textSize="30sp"
             android:id="@+id/paint_clean_btn"
             android:layout_width="100dip"
             android:layout_height="75dip"
-            android:text="@string/paint_clean" />
+            android:background="@drawable/cy_word"
+            android:text="@string/paint_clean"
+            android:textSize="30sp" />
 
         <Button
-            android:textSize="30sp"
             android:id="@+id/paint_chengyu_right"
             android:layout_width="100dip"
             android:layout_height="75dip"
-            android:text="@string/game_confirm" />
+            android:background="@drawable/cy_word"
+            android:text="@string/game_confirm"
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/paint_change_word_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/cy_word"
             android:text="@string/game_next"
             android:visibility="gone" />
     </LinearLayout>
