--- a/ChengYuDaHuiGame/res/layout/picture_guess_item.xml
+++ b/ChengYuDaHuiGame/res/layout/picture_guess_item.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="泥"
+        android:textSize="18sp"
         android:textColor="@android:color/black" />
 
 </RelativeLayout>
