change the ui width

--- a/ChengYuDaHuiGame/res/layout/activity_dictate.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_dictate.xml
@@ -189,12 +189,12 @@
 
             <ImageView
                 android:id="@+id/dictate_word_image"
-                android:layout_width="wrap_content"
+                android:layout_width="300dip"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/dictate_word_comment"
-                android:layout_width="match_parent"
+                android:layout_width="300dip"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"
