--- a/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
@@ -18,7 +18,7 @@
         <LinearLayout
             android:id="@+id/dictate_result_first_layout"
             android:layout_width="75dip"
-            android:layout_height="150dip"
+            android:layout_height="152dip"
             android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
@@ -31,6 +31,7 @@
                 android:textSize="45sp" />
 
             <ImageView
+                android:layout_marginTop="2dip"
                 android:id="@+id/result_first_img"
                 android:layout_width="75dip"
                 android:layout_height="75dip" />
@@ -39,7 +40,7 @@
         <LinearLayout
             android:id="@+id/dictate_result_second_layout"
             android:layout_width="75dip"
-            android:layout_height="150dip"
+            android:layout_height="152dip"
             android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
@@ -52,6 +53,7 @@
                 android:textSize="45sp" />
 
             <ImageView
+                 android:layout_marginTop="2dip"
                 android:id="@+id/result_second_img"
                 android:layout_width="75dip"
                 android:layout_height="75dip" />
@@ -60,7 +62,7 @@
         <LinearLayout
             android:id="@+id/dictate_result_third_layout"
             android:layout_width="75dip"
-            android:layout_height="150dip"
+            android:layout_height="152dip"
             android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
@@ -73,6 +75,7 @@
                 android:textSize="45sp" />
 
             <ImageView
+                 android:layout_marginTop="2dip"
                 android:id="@+id/result_third_img"
                 android:layout_width="75dip"
                 android:layout_height="75dip" />
@@ -81,7 +84,7 @@
         <LinearLayout
             android:id="@+id/dictate_result_fourth_layout"
             android:layout_width="75dip"
-            android:layout_height="150dip"
+            android:layout_height="152dip"
             android:orientation="vertical" >
 
             <TextView
@@ -93,6 +96,7 @@
                 android:textSize="45sp" />
 
             <ImageView
+                 android:layout_marginTop="2dip"
                 android:id="@+id/result_fourth_img"
                 android:layout_width="75dip"
                 android:layout_height="75dip" />
